@@ -5,8 +5,8 @@ import cn.bugstack.wrench.design.framework.tree.StrategyHandler;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.stereotype.Service;
+import top.daoha.domain.agent.model.entity.AutoAgentExecuteResultEntity;
 import top.daoha.domain.agent.model.entity.ExecuteCommandEntity;
-import top.daoha.domain.agent.model.valobj.AiAgentClientFlowConfigVO;
 import top.daoha.domain.agent.model.valobj.enums.AiClientTypeEnumVO;
 import top.daoha.domain.agent.service.auto.step.factory.DefaultAutoAgentExecuteStrategyFactory;
 
@@ -24,43 +24,37 @@ public class Step3QualitySupervisorNode extends AbstractExecuteSupport {
     protected String doApply(ExecuteCommandEntity requestParameter, DefaultAutoAgentExecuteStrategyFactory.DynamicContext dynamicContext) throws Exception {
         // 第三阶段：质量监督
         log.info("\n🔍 阶段3: 质量监督检查");
-        
+
         // 从动态上下文中获取执行结果
         String executionResult = dynamicContext.getValue("executionResult");
-        if (executionResult == null || executionResult.isBlank()) {
-            log.warn("⚠️ 执行结果为空，本轮按未通过处理并准备重新执行");
-
-            String supervisionResult = "执行结果为空，无法进行质量验收";
-            dynamicContext.setValue("supervisionResult", supervisionResult);
-            dynamicContext.setValue("qualityDecision", QualityDecision.UNKNOWN);
-            dynamicContext.setCompleted(false);
-            dynamicContext.setCurrentTask("上一轮没有产生执行结果，请重新执行任务并返回可验收的结果");
-
-            appendExecutionHistory(dynamicContext, executionResult, supervisionResult);
-            dynamicContext.setStep(dynamicContext.getStep() + 1);
-            return router(requestParameter, dynamicContext);
+        if (executionResult == null || executionResult.trim().isEmpty()) {
+            log.warn("⚠️ 执行结果为空，跳过质量监督");
+            return "质量监督跳过";
         }
-        
+
         String supervisionPrompt = String.format("""
                 **用户原始需求:** %s
                 
                 **执行结果:** %s
                 
-                **监督要求:** 请评估执行结果的质量，识别问题，并提供改进建议。
-                只有用户需求已经完整实现并且执行结果中存在可核验的成果时才返回 PASS。
-                只要仍有缺失项、仅给出建议但没有实际执行，或者成果不可核验，就必须返回 FAIL 或 OPTIMIZE。
+                **监督要求:** 
+                请严格评估执行结果是否真正满足了用户的原始需求：
+                1. 检查是否直接回答了用户的问题
+                2. 评估内容的完整性和实用性
+                3. 确认是否提供了用户期望的具体结果（如学习计划、项目列表等）
+                4. 判断是否只是描述过程而没有给出实际答案
                 
                 **输出格式:**
-                质量评估: [对执行结果的整体评估]
-                问题识别: [发现的问题和不足]
-                改进建议: [具体的改进建议]
+                需求匹配度: [执行结果与用户原始需求的匹配程度分析]
+                内容完整性: [内容是否完整、具体、实用]
+                问题识别: [发现的问题和不足，特别是是否偏离了用户真正的需求]
+                改进建议: [具体的改进建议，确保能直接满足用户需求]
                 质量评分: [1-10分的质量评分]
                 是否通过: [PASS/FAIL/OPTIMIZE]
                 """, requestParameter.getMessage(), executionResult);
 
         // 获取对话客户端
-        AiAgentClientFlowConfigVO aiAgentClientFlowConfigVO = dynamicContext.getAiAgentClientFlowConfigVOMap().get(AiClientTypeEnumVO.QUALITY_SUPERVISOR_CLIENT.getCode());
-        ChatClient chatClient = getChatClientByClientId(aiAgentClientFlowConfigVO.getClientId());
+        ChatClient chatClient = getRequiredChatClient(dynamicContext, AiClientTypeEnumVO.QUALITY_SUPERVISOR_CLIENT);
 
         String supervisionResult = chatClient
                 .prompt(supervisionPrompt)
@@ -69,42 +63,46 @@ public class Step3QualitySupervisorNode extends AbstractExecuteSupport {
                         .param(CHAT_MEMORY_RETRIEVE_SIZE_KEY, 1024))
                 .call().content();
 
-        QualityDecision qualityDecision = QualityDecisionParser.parse(supervisionResult);
-        parseSupervisionResult(dynamicContext.getStep(), supervisionResult, qualityDecision);
-        
+        assert supervisionResult != null;
+        parseSupervisionResult(dynamicContext, supervisionResult, requestParameter.getSessionId());
+
         // 将监督结果保存到动态上下文中
         dynamicContext.setValue("supervisionResult", supervisionResult);
-        dynamicContext.setValue("qualityDecision", qualityDecision);
 
-        // 只有明确的 PASS 才能结束；无法解析的结果按未通过处理，避免误判完成。
-        switch (qualityDecision) {
-            case PASS -> {
-                log.info("✅ 质量检查明确通过");
-                dynamicContext.setCompleted(true);
-            }
-            case FAIL -> {
-                log.info("❌ 质量检查未通过，需要重新执行");
-                dynamicContext.setCompleted(false);
-                dynamicContext.setCurrentTask("根据质量监督指出的问题重新执行任务：\n" + supervisionResult);
-            }
-            case OPTIMIZE -> {
-                log.info("🔧 质量检查建议优化，继续执行下一轮");
-                dynamicContext.setCompleted(false);
-                dynamicContext.setCurrentTask("根据质量监督建议优化执行结果：\n" + supervisionResult);
-            }
-            case UNKNOWN -> {
-                log.warn("⚠️ 无法识别质量监督结果，按未通过处理");
-                dynamicContext.setCompleted(false);
-                dynamicContext.setCurrentTask("质量监督结果格式无法识别，请重新检查任务完成情况：\n" + supervisionResult);
-            }
+        // 根据监督结果决定是否需要重新执行
+        if (supervisionResult.contains("是否通过: FAIL")) {
+            log.info("❌ 质量检查未通过，需要重新执行");
+            dynamicContext.setCurrentTask("根据质量监督的建议重新执行任务");
+        } else if (supervisionResult.contains("是否通过: OPTIMIZE")) {
+            log.info("🔧 质量检查建议优化，继续改进");
+            dynamicContext.setCurrentTask("根据质量监督的建议优化执行结果");
+        } else {
+            log.info("✅ 质量检查通过");
+            dynamicContext.setCompleted(true);
         }
-        
-        // 每轮只在监督结束后记录一次完整历史，避免一轮被统计成两步。
-        appendExecutionHistory(dynamicContext, executionResult, supervisionResult);
-        
+
+        // 更新执行历史
+        String stepSummary = String.format("""
+                === 第 %d 步完整记录 ===
+                【分析阶段】%s
+                【执行阶段】%s
+                【监督阶段】%s
+                """, dynamicContext.getStep(),
+                dynamicContext.getValue("analysisResult"),
+                executionResult,
+                supervisionResult);
+
+        dynamicContext.getExecutionHistory().append(stepSummary);
+
         // 增加步骤计数
         dynamicContext.setStep(dynamicContext.getStep() + 1);
-        
+
+        // 如果任务已完成或达到最大步数，进入总结阶段
+        if (dynamicContext.isCompleted() || dynamicContext.getStep() > dynamicContext.getMaxStep()) {
+            return router(requestParameter, dynamicContext);
+        }
+
+        // 否则继续下一轮执行，返回到Step1AnalyzerNode
         return router(requestParameter, dynamicContext);
     }
 
@@ -114,53 +112,81 @@ public class Step3QualitySupervisorNode extends AbstractExecuteSupport {
         if (dynamicContext.isCompleted() || dynamicContext.getStep() > dynamicContext.getMaxStep()) {
             return getBean("step4LogExecutionSummaryNode");
         }
-        
+
         // 否则返回到Step1AnalyzerNode进行下一轮分析
         return getBean("step1AnalyzerNode");
     }
-    
+
     /**
      * 解析监督结果
      */
-    private void parseSupervisionResult(int step, String supervisionResult, QualityDecision qualityDecision) {
+    private void parseSupervisionResult(DefaultAutoAgentExecuteStrategyFactory.DynamicContext dynamicContext, String supervisionResult, String sessionId) {
+        int step = dynamicContext.getStep();
         log.info("\n🔍 === 第 {} 步监督结果 ===", step);
 
-        String safeSupervisionResult = supervisionResult == null ? "" : supervisionResult;
-        String[] lines = safeSupervisionResult.split("\n");
+        String[] lines = supervisionResult.split("\n");
         String currentSection = "";
-        
+        StringBuilder sectionContent = new StringBuilder();
+
         for (String line : lines) {
             line = line.trim();
             if (line.isEmpty()) continue;
-            
+
             if (line.contains("质量评估:")) {
+                // 发送前一个部分的内容
+                sendSupervisionSubResult(dynamicContext, currentSection, sectionContent.toString(), sessionId);
                 currentSection = "assessment";
+                sectionContent.setLength(0);
                 log.info("\n📊 质量评估:");
                 continue;
             } else if (line.contains("问题识别:")) {
+                // 发送前一个部分的内容
+                sendSupervisionSubResult(dynamicContext, currentSection, sectionContent.toString(), sessionId);
                 currentSection = "issues";
+                sectionContent.setLength(0);
                 log.info("\n⚠️ 问题识别:");
                 continue;
             } else if (line.contains("改进建议:")) {
+                // 发送前一个部分的内容
+                sendSupervisionSubResult(dynamicContext, currentSection, sectionContent.toString(), sessionId);
                 currentSection = "suggestions";
+                sectionContent.setLength(0);
                 log.info("\n💡 改进建议:");
                 continue;
             } else if (line.contains("质量评分:")) {
+                // 发送前一个部分的内容
+                sendSupervisionSubResult(dynamicContext, currentSection, sectionContent.toString(), sessionId);
                 currentSection = "score";
+                sectionContent.setLength(0);
                 String score = line.substring(line.indexOf(":") + 1).trim();
                 log.info("\n📊 质量评分: {}", score);
+                sectionContent.append(score);
                 continue;
-            } else if (line.contains("是否通过")) {
+            } else if (line.contains("是否通过:")) {
+                // 发送前一个部分的内容
+                sendSupervisionSubResult(dynamicContext, currentSection, sectionContent.toString(), sessionId);
                 currentSection = "pass";
-                switch (qualityDecision) {
-                    case PASS -> log.info("\n✅ 检查结果: 通过");
-                    case FAIL -> log.info("\n❌ 检查结果: 未通过");
-                    case OPTIMIZE -> log.info("\n🔧 检查结果: 需要优化");
-                    case UNKNOWN -> log.warn("\n⚠️ 检查结果: 无法识别");
+                sectionContent.setLength(0);
+                String status = line.substring(line.indexOf(":") + 1).trim();
+                if (status.equals("PASS")) {
+                    log.info("\n✅ 检查结果: 通过");
+                } else if (status.equals("FAIL")) {
+                    log.info("\n❌ 检查结果: 未通过");
+                } else {
+                    log.info("\n🔧 检查结果: 需要优化");
                 }
+                sectionContent.append(status);
                 continue;
             }
-            
+
+            // 收集当前部分的内容
+            if (!currentSection.isEmpty()) {
+                if (!sectionContent.isEmpty()) {
+                    sectionContent.append("\n");
+                }
+                sectionContent.append(line);
+            }
+
             switch (currentSection) {
                 case "assessment":
                     log.info("   📋 {}", line);
@@ -176,23 +202,35 @@ public class Step3QualitySupervisorNode extends AbstractExecuteSupport {
                     break;
             }
         }
+
+        // 发送最后一个部分的内容
+        sendSupervisionSubResult(dynamicContext, currentSection, sectionContent.toString(), sessionId);
+
+        // 发送完整的监督结果
+        sendSupervisionResult(dynamicContext, supervisionResult, sessionId);
     }
 
-    private void appendExecutionHistory(
-            DefaultAutoAgentExecuteStrategyFactory.DynamicContext dynamicContext,
-            String executionResult,
-            String supervisionResult) {
-        String stepSummary = String.format("""
-                === 第 %d 步完整记录 ===
-                【分析阶段】%s
-                【执行阶段】%s
-                【监督阶段】%s
-                """, dynamicContext.getStep(),
-                dynamicContext.getValue("analysisResult"),
-                executionResult,
-                supervisionResult);
+    /**
+     * 发送监督结果到流式输出
+     */
+    private void sendSupervisionResult(DefaultAutoAgentExecuteStrategyFactory.DynamicContext dynamicContext,
+                                       String supervisionResult, String sessionId) {
+        AutoAgentExecuteResultEntity result = AutoAgentExecuteResultEntity.createSupervisionResult(
+                dynamicContext.getStep(), supervisionResult, sessionId);
+        sendSseResult(dynamicContext, result);
+    }
 
-        dynamicContext.getExecutionHistory().append(stepSummary);
+    /**
+     * 发送监督子结果到流式输出（细粒度标识）
+     */
+    private void sendSupervisionSubResult(DefaultAutoAgentExecuteStrategyFactory.DynamicContext dynamicContext,
+                                          String section, String content, String sessionId) {
+        // 抽取的通用判断逻辑
+        if (!content.isEmpty() && !section.isEmpty()) {
+            AutoAgentExecuteResultEntity result = AutoAgentExecuteResultEntity.createSupervisionSubResult(
+                    dynamicContext.getStep(), section, content, sessionId);
+            sendSseResult(dynamicContext, result);
+        }
     }
     
 }
